k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projet-eni
  labels:
    name: projet-eni
    project: todolist
