k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: projet-eni
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 1tanguy/projet-devops:backend-2d50d4c
          ports:
            - containerPort: 3000
      tolerations:           
        - key: "CriticalAddonsOnly"
          operator: "Exists"
          effect: "NoSchedule"
