k8s/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: projet-eni
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: projet-eni
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 1tanguy/projet-devops:frontend-2d50d4c
          ports:
            - containerPort: 80
      tolerations:           
        - key: "CriticalAddonsOnly"
          operator: "Exists"
          effect: "NoSchedule"
