k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: projet-eni
  name: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
